# face_recognition

./: .gitignore  README.md  pubspec.yaml
android/: CMakeLists.txt  gradle.properties
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/face_recognition/: MainActivity.kt
ios/: common_lib.podspec
ios/Classes/: common_lib.cpp
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: common_lib.dart  main.dart  utility.dart
